Ajout de df/dx et relecture

--- a/Derivation.ipynb
+++ b/Derivation.ipynb
@@ -17,7 +17,7 @@
     "$$\n",
     "Où\n",
     "$$\n",
-    "a = \\frac{y_2-y_1}{x_2-x_1} = \\frac{f(x_2)-f(x_1)}{x_2-x_1}\n",
+    "a = \\frac{y_2-y_1}{x_2-x_1} = \\frac{f(x_2)-f(x_1)}{x_2-x_1} = \\frac{\\mathrm{d}f}{\\mathrm{d}x}\n",
     "$$\n",
     "$$\n",
     "b = y_1 - ax_1 = f(x_1) - ax_1\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensuite on se donne une fonction $f()$ \"sympa\". \n",
+    "Ensuite on se donne une fonction $f()$ \"sympa\". En français cela veut dire qu'elle est continue, dérivable... \n",
     "\n",
     "Ici on a pris $y=(x-3)(x-5)(x-7)+85$\n",
     "\n",
@@ -65,23 +65,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ci-dessous, RenderPlot() est une procédure (au sens informatique du therme) qui se charge d'afficher :\n",
+    "Ci-dessous, RenderPlot() est une procédure. En effet, au contraire d'une fonction (qui revoie une valeur), elle ne renvoie rien mais elle se charge d'afficher :\n",
     "* La courbe représentative\n",
     "* Les 2 points d'abcisse $x_1$ et $x_2$\n",
     "* La droite (la corde) qui passe par les 2 points en question\n",
     "\n",
-    "Le but du jeu est ensuite de jouer avec les 2 curseurs et de réaliser que lorsque $x_1$ et $x_2$ sont très proche alors la droite se rapproche de ce que devrait être la tangente à la coube au point d'abcissse $x_1$ (ou $x_2$ car les valeurs sont presque identiques) "
+    "Le but du jeu est ensuite de jouer avec les 2 curseurs afin de bien comprendre que lorsque $x_1$ et $x_2$ sont très proches alors la droite se rapproche de ce que devrait être la tangente à la coube au point d'abcissse $x_1$ (ou $x_2$ car les valeurs sont presque identiques) \n",
+    "\n",
+    "**Note :** si les curseurs manquent de pécision on peut saisir la valeur désirée directement au bout à droite du curseur."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b5d7a54239c4c7c93baac901a656bfe",
+       "model_id": "de11bde7597d47a98a778c302cc75359",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
